--- a/music/package.json
+++ b/music/package.json
@@ -11,10 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
     "babel-runtime": "^6.0.0",
-    "fastclick": "^1.0.6"
+    "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
