--- a/music/package.json
+++ b/music/package.json
@@ -20,7 +20,9 @@
     "vue-lazyload": "^1.2.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "create-keyframe-animation": "^0.1.0"
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
