--- a/music/package.json
+++ b/music/package.json
@@ -2,7 +2,7 @@
   "name": "music",
   "version": "1.0.0",
   "description": "音乐app",
-  "author": "xdaizi <1055671428@qq.com>",
+  "author": "xdaizi",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --open --config build/webpack.dev.conf.js",
@@ -34,9 +34,10 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.2.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-polyfill": "^6.2.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
