--- a/music/package.json
+++ b/music/package.json
@@ -11,19 +11,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "babel-runtime": "^6.0.0",
     "better-scroll": "^1.9.1",
-    "fastclick": "^1.0.6",
+    "create-keyframe-animation": "^0.1.0",
+    "good-storage": "^1.0.1",
+    "js-base64": "^2.1.9",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "create-keyframe-animation": "^0.1.0",
-    "js-base64": "^2.1.9",
-    "lyric-parser": "^1.0.1",
-    "good-storage": "^1.0.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
